--- a/packages/ui/__stories__/Colors.stories.mdx
+++ b/packages/ui/__stories__/Colors.stories.mdx
@@ -1,14 +1,11 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks'
 
-<Meta title="core/Colors" />
+<Meta title="Visual Style/Colors" />
 
 ## Primary
 
 <ColorPalette>
-  <ColorItem
-    title="Primary-Lighter"
-    colors={['#EBF4FF', 'rgb(235, 244, 255)']}
-  />
+  <ColorItem title="Primary-Lighter" colors={['#EBF4FF', 'rgb(235, 244, 255)']} />
   <ColorItem title="Primary-Light" colors={['#CFE5FF', 'rgb(207, 229, 255)']} />
   <ColorItem title="Primary-Normal" colors={['#2A7DE2', 'rgb(42, 125, 226)']} />
   <ColorItem title="Primary-Dark" colors={['#105EBC', 'rgb(16, 94, 188)']} />
