--- a/packages/ui/__stories__/Colors.stories.mdx
+++ b/packages/ui/__stories__/Colors.stories.mdx
@@ -5,9 +5,9 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks'
 ## Primary
 
 <ColorPalette>
-  <ColorItem title="Primary-Lighter" colors={['#EBF4FF', 'rgb(235, 244, 255)']} />
-  <ColorItem title="Primary-Light" colors={['#CFE5FF', 'rgb(207, 229, 255)']} />
-  <ColorItem title="Primary-Normal" colors={['#2A7DE2', 'rgb(42, 125, 226)']} />
-  <ColorItem title="Primary-Dark" colors={['#105EBC', 'rgb(16, 94, 188)']} />
-  <ColorItem title="Primary-Darker" colors={['#003068', 'rgb(0, 48, 104)']} />
+  <ColorItem title="Primary-Light" colors={['#1673e3']} />
+  <ColorItem title="Primary-Normal" colors={['#2160c0']} />
+  <ColorItem title="Primary-Dark" colors={['#0c47a3']} />
 </ColorPalette>
+
+<!-- TODO: Fill me -->
