export.scss -> export.module.scss

--- a/packages/ui/__stories__/Colors.stories.mdx
+++ b/packages/ui/__stories__/Colors.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks'
 import { Figma } from 'storybook-addon-designs/blocks'
 
-import styleConsts from '../styles/constants/export.scss'
+import styleConsts from '../styles/constants/export.module.scss'
 
 <Meta title="Visual Style/Colors" />
 
