revert: colors change

--- a/packages/ui/__stories__/Colors.stories.mdx
+++ b/packages/ui/__stories__/Colors.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks'
+import { Figma } from 'storybook-addon-designs/blocks'
 
 import styleConsts from '../styles/constants/export.module.scss'
 
@@ -11,3 +12,9 @@ import styleConsts from '../styles/constants/export.module.scss'
       <ColorItem title={colorName} colors={[colorValue]} />
     ))}
 </ColorPalette>
+
+<Figma
+  url="https://www.figma.com/file/8mVm6LTbp2Z0RaWWjTZoft/%F0%9F%90%9DHIVE---Hazelcast-Design-System?node-id=478%3A1434"
+  collapsable
+  defaultCollapsed
+/>
