add self hosted fonts

--- a/packages/ui/__stories__/Typography.stories.mdx
+++ b/packages/ui/__stories__/Typography.stories.mdx
@@ -16,7 +16,7 @@ export const getSampleText = (letterSpacing) => (
 
 ## Headings
 
-**Font:** Roboto
+**Font:** PP Telegraf
 
 **Weight:** regular
 
@@ -32,7 +32,7 @@ export const getSampleText = (letterSpacing) => (
   fontFamily={styleConsts.fontFamilyHeading}
 />
 
-**Font:** Roboto
+**Font:** PP Telegraf
 
 **Weight:** bold
 
